--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "postcss-nesting": "^12.1.1"
   }
 }
