--- a/client/package.json
+++ b/client/package.json
@@ -10,34 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@heroicons/react": "^1.0.6",
-    "@reduxjs/toolkit": "^2.2.2",
-    "firebase": "^10.10.0",
-    "flowbite-react": "^0.7.3",
+    "@ckeditor/ckeditor5-build-classic": "^41.3.1",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "firebase": "^10.7.1",
+    "flowbite-react": "^0.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "react-redux": "^9.0.1",
+    "react-router-dom": "^6.20.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.6"
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.31",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.0.0"
   }
 }
