--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.2.3",
-    "nodemon": "^3.1.0"
+    "moment": "^2.30.1",
+    "mongoose": "^8.0.2",
+    "nodemon": "^3.0.2"
   },
   "devDependencies": {
     "postcss-nesting": "^12.1.1"
